Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-79162

Qt build segfaults due to infinite recursion in qDetectCpuFeatures

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P0: Blocker P0: Blocker
    • None
    • 5.15, 6.0
    • Core: Other
    • None
    • Ubuntu 18.04
    • 7fbadeddc14304d595aeaaaa6d398dcb21d86404 (qt/qtbase/5.15)

      Probably introduced by commit 780137d585344bf9de906a285a50498104c0c66e

      This seems to affect tools that are used in the build process. One example is src/tools/qvkgen:

      (gdb) bt
      #0  0x00007ffff7565cb0 in qCpuFeatures () at tools/qsimd_p.h:359
      #1  0x00007ffff75667ee in qRandomCpu (buffer=0x7fffff7ff0a0, count=4) at tools/qsimd.cpp:671
      #2  0x00007ffff7566242 in detectProcessorFeatures () at tools/qsimd.cpp:395
      #3  0x00007ffff756634e in qDetectCpuFeatures () at tools/qsimd.cpp:570
      #4  0x00007ffff7565cde in qCpuFeatures () at tools/qsimd_p.h:365
      #5  0x00007ffff75667ee in qRandomCpu (buffer=0x7fffff7ff250, count=4) at tools/qsimd.cpp:671
      #6  0x00007ffff7566242 in detectProcessorFeatures () at tools/qsimd.cpp:395
      #7  0x00007ffff756634e in qDetectCpuFeatures () at tools/qsimd.cpp:570
      #8  0x00007ffff7565cde in qCpuFeatures () at tools/qsimd_p.h:365
      #9  0x00007ffff75667ee in qRandomCpu (buffer=0x7fffff7ff400, count=4) at tools/qsimd.cpp:671
      #10 0x00007ffff7566242 in detectProcessorFeatures () at tools/qsimd.cpp:395
      #11 0x00007ffff756634e in qDetectCpuFeatures () at tools/qsimd.cpp:570
      #12 0x00007ffff7565cde in qCpuFeatures () at tools/qsimd_p.h:365
      #13 0x00007ffff75667ee in qRandomCpu (buffer=0x7fffff7ff5b0, count=4) at tools/qsimd.cpp:671
      #14 0x00007ffff7566242 in detectProcessorFeatures () at tools/qsimd.cpp:395

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            thiago Thiago Macieira
            tvete Paul Olav Tvete
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes